--- a/notebooks/eda_questions.ipynb
+++ b/notebooks/eda_questions.ipynb
@@ -394,13 +394,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-11T11:46:41.253880Z",
-     "start_time": "2025-07-11T11:46:41.247469Z"
+     "end_time": "2025-07-11T12:19:59.425956Z",
+     "start_time": "2025-07-11T12:19:59.421218Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(f'Mean answer word count: {df_answers['Answer'].str.split().apply(len).mean():.2f}')\n",
+    "print(f'Mean answer word count: {df_answers['Answer'].str.split().apply(len).median():.2f}')\n",
     "print(f'Max answer word count: {df_answers['Answer'].str.split().apply(len).max()}')"
    ],
    "id": "9d3b64113e5ef6e",
@@ -409,12 +409,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean answer word count: 154.34\n",
+      "Mean answer word count: 128.00\n",
       "Max answer word count: 3271\n"
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 27
   },
   {
    "metadata": {
