--- a/notebooks/chonkie.ipynb
+++ b/notebooks/chonkie.ipynb
@@ -10,11 +10,15 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-07-28T17:10:40.296974Z",
+     "start_time": "2025-07-28T17:10:40.212396Z"
+    }
    },
    "source": "from chonkie import *",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -46,7 +50,7 @@
     "    'token_md': TokenChunker(chunk_size=chunk_size, chunk_overlap=chunk_overlap),\n",
     "    'sentence_md': SentenceChunker.from_recipe('markdown', lang='en', chunk_size=chunk_size, chunk_overlap=chunk_overlap),\n",
     "    'recursive_md': RecursiveChunker.from_recipe('markdown', lang='en', chunk_size=chunk_size),\n",
-    "    'semantic_md': SemanticChunker.from_recipe('markdown', lang='en', chunk_size=chunk_size),\n",
+    "    'semantic_md': SemanticChunker.from_recipe('markdown', lang='en', embedding_model=embedding_model, chunk_size=chunk_size),\n",
     "\n",
     "    # Warning:\n",
     "    # Token indices sequence length is longer than the specified maximum sequence length for this model (290 > 256).\n",
@@ -76,7 +80,7 @@
     "    for chunker_name, chunker in chunkers.items():\n",
     "        with open(output_name + chunker_name + file_type, 'w') as file:\n",
     "            chunks = chunker(text)\n",
-    "            file.write('\\n\\n'.join(map(lambda x: x.text, chunks)))"
+    "            file.write('\\n\\n'.join(map(lambda x: x.content, chunks)))"
    ],
    "id": "95c911da02226641",
    "outputs": [],
@@ -122,7 +126,7 @@
    "cell_type": "code",
    "source": [
     "with open('parsers/outputs/marker.md') as file:\n",
-    "    log_chunk_strategies(file.read(), chunkers_md, 'outputs/chunks/marker/', '.md')"
+    "    log_chunk_strategies(file.read(), chunkers_md, 'outputs/chunks/markdown/', '.md')"
    ],
    "id": "23ec0d207a5f2a11",
    "outputs": [],
@@ -131,8 +135,8 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "9c2a1911e9892161"
+   "source": "Same",
+   "id": "6fbc26bfc7e1bcf7"
   }
  ],
  "metadata": {
